# django_edera

./: .gitignore  pyproject.toml
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: __init__.py  base.py  development.py  utils_config.py
